# ns-prior-auth-agent

./: .gitignore  CLAUDE.md  README.md  SPEC.md
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: code_evaluator.py  criteria_evaluator.py  document_analyzer.py  enrichment.py  gap_detector.py  graph.py  letter_generator.py  order_parser.py  risk_scorer.py  state.py
backend/app/api/: routes_catalog.py  routes_evaluate.py  routes_evaluate_documents.py  routes_evaluate_stream.py  routes_letter.py  routes_mnf.py  routes_rules.py
backend/app/core/: llm.py  pdf_parser.py  prompts.py
backend/app/db/: database.py  models.py  seed.py
backend/app/mnf/: __init__.py  calibration.py  field_mapper.py  generator.py  guidelines.py  models.py  pdf_renderer.py  pipeline.py  prompts.py  templates.py  validator.py
backend/app/models/: catalog.py  evaluation.py  letter.py  order.py  rules.py
backend/app/services/: catalog_service.py  rules_service.py
backend/data/mnf/calibration/: default.json
backend/data/mnf/guidelines/: acmg.json  nccn.json
backend/data/mnf/templates/: aetna-hereditary-cancer-v1.json  uhc-hereditary-cancer-v1.json  uhc-wes-wgs-v1.json
backend/seed_data/catalogs/: sample_test_catalog.json
backend/seed_data/orders/: 04_nicu_rapid_wgs.json  05_wrong_provider_no_counseling.json
backend/seed_data/payors/: aetna_wes_wgs.json  uhc_wes_wgs.json
frontend/: CLAUDE.md  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/public/: sample_order.json
(+15 files in other folders)
